Fixed spacing for full name in nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,9 +16,9 @@ nav {
 
 nav a.logo {
   color: white;
-  font-size: 30px;
+  font-size: 40px;
   line-height: 80px;
-  padding: 0 80px;
+  padding: 0 40px 0 25px;
   font-weight: 300;
   text-decoration: none;
   font-family: "Dancing Script";
